2006-06-08  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/keybindings.c, src/prefs.c, src/dialogs.c:
   Added labels for each defined shortcut to have a nicer
   representation in the dialogs.
 * geany.desktop.in: Removed duplicate entry for Encoding, now
                     desktop-file-validate processes with no errors.
 * configure.in, doc/geany.1.in:
   Renamed geany.1 to geany.1.in to let it be processed by configure.
   Added GEANY_DATA_DIR to configure.in.
 * doc/Makefile.am, doc/geany.xsl:
   Removed unneeded code for generating geany.1. Added man_MANS to get
   installed the manpage. Changed build command for HTML documentation.
   Added new file doc/geany.xsl.
 * geany.spec.in: Some improvements, corrected download URL.
 * src/prefs.c: Hide make and terminal settings under Windows.


2006-06-07  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c: Fixed segfault when inserting comments and no
                    filetype is set.
 * src/callbacks.c, src/sciwrappers.c, src/sciwrappers.h:
   Use the character position under the mouse click for Go to
   definition/declaration and for overridden middle click text paste.
 * src/utils.c, src/utils.h, src/callbacks.c, src/document.c,
   src/document.h: Fix bug with Go to tag defn/decl when the filename
                   is a link (TagManager dereferences linked filenames)


2006-06-06  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/highlighting.c: Enabled folding for markup filetypes
                       (HTML, XML, PHP, DocBook).
 * src/treeviews.c: Replaced "Members" by "Methods" to make it clearer.


2006-06-05  Nick Treleaven  <nick.treleaven@btinternet.com>

 * doc/geany.docbook: Added save current file behaviour when building.
 * src/sci_cb.c: Fix empty white box glitch with tag autocompletion,
                 also improves typing response efficiency.


2006-06-05  Enrico Troeger  <enrico.troeger@uvena.de>

 * src/dialog.c, src/callbacks.c: Added dialog to show defined keyboard